syntax = "proto3";
option csharp_namespace = "Discount.Grpc";

package discount;

service DiscountProtoService {
	rpc GetDisount(GetDisountRequest) returns (CouponModel);
	rpc CreateDisount(CreateDisountRequest) returns (CouponModel);
	rpc UpdateDisount(UpdateDisountRequest) returns (CouponModel);
	rpc DeleteDisount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message DeleteDiscountResponse {
	bool success = 1;
}

message GetDisountRequest {
	string productName = 1;
}

message CreateDisountRequest {
	CouponModel coupon = 1;
}

message UpdateDisountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}